@@ -35,7 +35,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Mono.Collections.DataStructures\ContiguousSplayedRadixTree.cs" />
+    <Compile Include="Mono.Collections.DataStructures\ContiguousTernarySearchTree.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Mono.Collections.Internal\SinglyLinkedList.cs" />
     <Compile Include="Mono.Collections.Internal\SinglyLinkedListNode.cs" />
